tests/negative/Internal/issue2293.juvix
module issue2293;

type List A :=
  | nil
  | cons A (List A);

open List;

map {A B} (f : A → B) : List A → List B
  | nil := nil
  | cons h t := cons (f h) (map f t);
